// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireNewPassword test render test render correctly 1`] = `
<Component
  data-test="require-new-password-section"
>
  <Component
    data-test="require-new-password-header-section"
  >
    Change Password
  </Component>
  <Component
    data-test="require-new-password-body-section"
  >
    <Component
      autoFocus={true}
      data-test="require-new-password-new-password-input"
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      type="password"
    />
  </Component>
  <Component>
    <Component>
      <Component
        onClick={[Function]}
      >
        Change
      </Component>
    </Component>
    <Component>
      <Component
        data-test="require-new-password-back-to-sign-in-link"
        onClick={[Function]}
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render correctly with required attributes 1`] = `
<Component
  data-test="require-new-password-section"
>
  <Component
    data-test="require-new-password-header-section"
  >
    Change Password
  </Component>
  <Component
    data-test="require-new-password-body-section"
  >
    <Component
      autoFocus={true}
      data-test="require-new-password-new-password-input"
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      type="password"
    />
    <Component
      key="given_name"
      name="given_name"
      onChange={[Function]}
      placeholder="Given Name"
      type="text"
    />
    <Component
      key="family_name"
      name="family_name"
      onChange={[Function]}
      placeholder="Family Name"
      type="text"
    />
  </Component>
  <Component>
    <Component>
      <Component
        onClick={[Function]}
      >
        Change
      </Component>
    </Component>
    <Component>
      <Component
        data-test="require-new-password-back-to-sign-in-link"
        onClick={[Function]}
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render nothing with hide 1`] = `""`;

exports[`RequireNewPassword test render test render nothing with incorrect authState 1`] = `""`;
